--- a/Basic-JavaScript-Projects/Project1_expressions_alert/index.html
+++ b/Basic-JavaScript-Projects/Project1_expressions_alert/index.html
@@ -5,8 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        alert("Hello World!");
-    </script>
+    <script src="./JS/main.js"></script>
 </body>
 </html>
