--- a/Basic-JavaScript-Projects/Project1_expressions_alert/index.html
+++ b/Basic-JavaScript-Projects/Project1_expressions_alert/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <script src="./JS/main.js"></script>
 </head>
 <body>
-    <script src="./JS/main.js"></script>
+    <br>
+    <input type="text" onkeydown="pressKey()">Please Enter Text</input>
 </body>
 </html>
