--- a/Basic-JavaScript-Projects/Project2_functions/index.html
+++ b/Basic-JavaScript-Projects/Project2_functions/index.html
@@ -6,6 +6,10 @@
         <script src="./JS/main.js"></script>
     </head>
     <body>
-        <button onclick="MY_First_Function()" id="Button_Text">Click me!</button>
+        <button onclick="My_First_Function()" id="Button_Text">Click me!</button>
+        <!--Button to call the JS function.-->
+        <br>
+        <p id="p1">^^^Please click the button.^^^</p>
+        <!--Paragraph to display text.-->
     </body>
 </html>
