--- a/Basic-JavaScript-Projects/Project3_math_operators/index.html
+++ b/Basic-JavaScript-Projects/Project3_math_operators/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Index</title>
-
+        <script src="JS/main.js"></script>
     </head>
     <body>
-
+        <p id="Math" onclick=""></p>
     </body>
 </html>
 
