--- a/Basic-JavaScript-Projects/Project3_math_operators/index.html
+++ b/Basic-JavaScript-Projects/Project3_math_operators/index.html
@@ -6,7 +6,7 @@
         <script src="JS/main.js"></script>
     </head>
     <body>
-        <p id="Math" onclick=""></p>
+        <p id="Math" onclick="Add()">Text</p>
     </body>
 </html>
 
