--- a/Basic-JavaScript-Projects/Project3_math_operators/index.html
+++ b/Basic-JavaScript-Projects/Project3_math_operators/index.html
@@ -6,7 +6,26 @@
         <script src="JS/main.js"></script>
     </head>
     <body>
-        <p id="Math" onclick="Add()">Text</p>
+        <p id="Math0" onclick="Addition()">Addition</p>
+        <br>
+        <p id="Math1" onclick="Subtraction()">Subtraction</p>
+        <br>
+        <p id="Math2" onclick="Multiplication()">Multiplication</p>
+        <br>
+        <p id="Math3" onclick="Division()">Division</p>
+        <br>
+        <p id="Math4" onclick="MultiOp()">Multiple Operators</p>
+        <br>
+        <p id="Math5" onclick="Modulus()">Modulus</p>
+        <br>
+        <p id="Math6" onclick="Negation()">Negation</p>
+        <br>
+        <p id="Math7" onclick="Increment()">Increment</p>
+        <br>
+        <p id="Math8" onclick="Decrement()">Decrement</p>
+        <br>
+        <p id="Math9" onclick="Random()">Math.random() function</p>
+        
     </body>
 </html>
 
