--- a/Basic-JavaScript-Projects/Misc_Projects/HTML_1.html
+++ b/Basic-JavaScript-Projects/Misc_Projects/HTML_1.html
@@ -23,5 +23,15 @@
             <button onclick="pickColour()">Submit</button>
             <p id="textOut"></p>
         </div>
+        <br>
+        <br>
+        <!--Class Name assignment-->
+        <p class="p">1</p>
+        <p class="p">1</p>
+        <button onclick="changePFunction()">Click to change.</button>
+        <br>
+        <br>
+        <!--Canvas assignment-->
+        <canvas id="c1" height="250" width="500" style="border:10px solid blue"></canvas> 
     </body>
 </html>
